[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Description of your project"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"  # Or whichever license you're using
readme = "README.md"
packages = [
    { include = "your_package" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "23.2.1"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
attrs = "24.2.0"
cachetools = "5.5.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
contourpy = "1.3.0"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
datasets = "2.20.0"
decorator = "4.4.2"
deprecation = "2.1.0"
dill = "0.3.8"
fastapi = "0.114.0"
ffmpy = "0.4.0"
filelock = "3.16.0"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = { version = "2024.5.0", extras = ["http"] }
gradio = "4.39.0"
gradio-client = "1.1.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.2"
huggingface-hub = "0.24.6"
idna = "3.8"
imageio = "2.35.1"
imageio-ffmpeg = "0.5.1"
importlib-resources = "6.4.4"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
kiwisolver = "1.4.7"
lancedb = "0.8.2"
langchain = "0.2.4"
langchain-community = "0.2.4"
langchain-core = "0.2.6"
langchain-text-splitters = "0.2.1"
langsmith = "0.1.116"
llvmlite = "0.43.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.22.0"
matplotlib = "3.9.1"
mdurl = "0.1.2"
moviepy = "1.0.3"
multidict = "6.0.5"
multiprocess = "0.70.16"
mypy-extensions = "1.0.0"
numba = "0.60.0"
numpy = "1.26.4"
opencv-python = "4.10.0.82"
orjson = "3.10.7"
overrides = "7.7.0"
packaging = "24.1"
pandas = "2.2.2"
pillow = "10.3.0"
predictionguard = "2.1.0"
proglog = "0.1.10"
py = "1.11.0"
pyarrow = "15.0.0"
pyarrow-hotfix = "0.6"
pydantic = "2.9.0"
pydantic-core = "2.23.2"
pydub = "0.25.1"
pygments = "2.18.0"
pylance = "0.12.1"
pynndescent = "0.5.13"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytube = "15.0.0"
pytubefix = "6.5.2"
pytz = "2024.1"
pyyaml = "6.0.2"
ratelimiter = "1.2.0.post0"
requests = "2.32.3"
retry = "0.9.2"
rich = "13.8.0"
ruff = "0.6.4"
scikit-learn = "1.5.1"
scipy = "1.14.1"
seaborn = "0.13.2"
semantic-version = "2.10.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.34"
starlette = "0.38.5"
tabulate = "0.9.0"
tenacity = "8.5.0"
threadpoolctl = "3.5.0"
tomlkit = "0.12.0"
tqdm = "4.66.5"
typer = "0.12.5"
typing-extensions = "4.12.2"
typing-inspect = "0.9.0"
tzdata = "2024.1"
umap-learn = "0.5.6"
urllib3 = "2.2.2"
uvicorn = "0.30.6"
websockets = "11.0.3"
webvtt-py = "0.5.1"
xxhash = "3.5.0"
yarl = "1.11.0"
youtube-transcript-api = "0.6.2"
transformers = "^4.45.1"
umap = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
